--- a/jade/partials/_head.jade
+++ b/jade/partials/_head.jade
@@ -1,3 +1,5 @@
+// Bourbonpug v1.0, by pixelminds, 2017 GNU General Public License v3 
+    https://github.com/pixelminds/bourbonpug
 doctype html
 html(lang='es')
     head
