--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+/* Bourbonpug v1.0, by pixelminds, 2017 GNU General Public License v3 
+https://github.com/pixelminds/bourbonpug */
 html {
   box-sizing: border-box;
 }
