--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
-// Bourbonpug v1.0, by pixelminds, 2017 GNU General Public License v3 
-// https://github.com/pixelminds/bourbonpug
+/* Bourbonpug v1.0, by pixelminds, 2017 GNU General Public License v3 
+https://github.com/pixelminds/bourbonpug */
 @import "../lib/bourbon";
 @import "../lib/neat";
 @import "../lib/base/base";
