--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
-/* Bourbonpug v1.0, by pixelminds, 2017 GNU General Public License v3 
+/* Bourbonpug v1.0.1 -
+by pixelminds, 2017 -
+GNU General Public License v3 -
 https://github.com/pixelminds/bourbonpug */
 html {
   box-sizing: border-box;
@@ -324,9 +326,6 @@ textarea {
   padding: 0.2em 0;
 }
 
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -336,180 +335,82 @@ section {
   margin: auto;
 }
 
-ol.default {
-  list-style-type: decimal;
-  list-style-position: inside;
-  margin-bottom: 1.2em;
+.footer {
+  background: #1c3653;
+  padding: 3em 1.618em;
+  width: 100%;
 }
 
-ol.default > li {
-  margin-bottom: 0.3em;
-}
-
-ul.default {
-  list-style-type: circle;
-  list-style-position: inside;
-  margin-bottom: 1.2em;
-}
-
-ul.default > li {
-  margin-bottom: 0.3em;
-}
-
-img.right {
-  float: right;
-}
-
-p.social {
+.footer .footer-logo {
+  margin-bottom: 2em;
   text-align: center;
 }
 
-i.fa {
-  padding: 0.5em;
-  font-size: 1.5em;
+.footer .footer-logo img {
+  height: 3em;
 }
 
-article.type-system-rounded {
-  font-family: "Nunito", sans-serif;
-  text-align: left;
-}
-
-article.type-system-rounded::after {
-  clear: both;
-  content: "";
-  display: block;
-}
-
-article.type-system-rounded h1,
-article.type-system-rounded h2,
-article.type-system-rounded h3,
-article.type-system-rounded p {
-  margin: 0;
-}
-
-article.type-system-rounded hr {
-  border-bottom: 1px solid #ddd;
-  border-left: 0;
-  border-right: 0;
-  border-top: 0;
-  margin: 1.5em 0;
-}
-
-article.type-system-rounded p {
-  color: #333;
-  line-height: 1.5;
-}
-
-article.type-system-rounded a {
-  color: #1565c0;
-  text-decoration: none;
-}
-
-article.type-system-rounded .type {
-  border-bottom: 1px solid;
-  display: inline-block;
-  font-family: "Nunito", sans-serif;
-  font-size: 0.7em;
-  font-weight: 800;
-  margin-bottom: 2em;
-  padding: 0.3em 0;
-  text-align: left;
-  text-transform: uppercase;
-}
-
-article.type-system-rounded h1 {
-  font-family: "Varela Round", sans-serif;
-  font-size: 1.8em;
-  margin-bottom: 0.5em;
-}
-
-@media screen and (min-width: 600px) {
-  article.type-system-rounded h1 {
-    font-size: 2.4em;
-  }
-}
-
-article.type-system-rounded h2 {
-  font-family: "Varela Round", sans-serif;
-  font-size: 1.2em;
-  font-weight: 400;
-  line-height: 1.4em;
-  margin-bottom: 0.9em;
-}
-
-@media screen and (min-width: 600px) {
-  article.type-system-rounded h2 {
-    font-size: 1.4em;
-  }
-}
-
-article.type-system-rounded code {
-  background: #F7F7F7;
-  border-radius: 4.5px;
-  border: 1px solid #E0E0E0;
-  font-family: monaco;
-  font-size: 0.7em;
-  font-style: normal;
-  padding: 0.1em 0.4em;
-  white-space: nowrap;
-}
-
-article.type-system-rounded h3 {
-  font-family: "Varela Round", sans-serif;
-  font-size: 1.2em;
-  font-weight: 400;
-  line-height: 1.3em;
-  margin-bottom: 0.4em;
-}
-
-article.type-system-rounded p.date {
-  color: rgba(51, 51, 51, 0.4);
-  font-family: "Nunito", sans-serif;
-  font-size: 0.9em;
-  margin-bottom: 0.3em;
-}
-
-article.type-system-rounded p {
-  font-family: "Nunito", sans-serif;
-  font-size: 1.05em;
-  font-weight: 300;
-  line-height: 1.4em;
+.footer .footer-links {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 1.5em;
 }
 
-article.type-system-rounded p span {
-  font-family: "Varela Round", sans-serif;
-  font-size: 0.8em;
-  text-transform: uppercase;
+.footer ul {
+  -webkit-flex-basis: 13em;
+      -ms-flex-preferred-size: 13em;
+          flex-basis: 13em;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0;
+  margin-bottom: 3em;
+  padding: 0;
 }
 
-article.type-system-rounded a.read-more {
-  display: inline-block;
-  font-family: "Varela Round", sans-serif;
-  font-size: 0.8em;
-  font-weight: 700;
-  margin-left: 0.2em;
-  position: relative;
-  text-transform: uppercase;
+.footer li {
+  line-height: 1.5em;
+  list-style: none;
+  text-align: center;
 }
 
-article.type-system-rounded a.read-more span {
-  font-size: 1.5em;
-  position: absolute;
-  right: -12px;
-  top: -1px;
+.footer li a {
+  color: rgba(255, 255, 255, 0.4);
+  text-decoration: none;
 }
 
-article.type-system-rounded hr {
-  width: 3em;
+.footer li a:focus,
+.footer li a:hover {
+  color: white;
 }
 
-article.type-system-rounded p.author {
-  font-family: "Nunito", sans-serif;
+.footer li h3 {
+  color: white;
+  font-size: 1em;
+  margin-bottom: 0.4em;
 }
 
-li {
-  color: gray;
+.footer hr {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  margin: 0 auto 1.5em;
+  width: 12em;
+}
+
+.footer p {
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 0.9em;
+  line-height: 1.5em;
+  margin: auto;
+  max-width: 35em;
+  text-align: center;
 }
 
 .parallax-window,
@@ -874,84 +775,6 @@ header.navigation .search-bar form button[type=submit] img {
   transform: translate3d(0, 0, 0);
 }
 
-.footer {
-  background: #1c3653;
-  padding: 3em 1.618em;
-  width: 100%;
-}
-
-.footer .footer-logo {
-  margin-bottom: 2em;
-  text-align: center;
-}
-
-.footer .footer-logo img {
-  height: 3em;
-}
-
-.footer .footer-links {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 1.5em;
-}
-
-.footer ul {
-  -webkit-flex-basis: 13em;
-      -ms-flex-preferred-size: 13em;
-          flex-basis: 13em;
-  -webkit-flex-shrink: 0;
-      -ms-flex-negative: 0;
-          flex-shrink: 0;
-  margin-bottom: 3em;
-  padding: 0;
-}
-
-.footer li {
-  line-height: 1.5em;
-  list-style: none;
-  text-align: center;
-}
-
-.footer li a {
-  color: rgba(255, 255, 255, 0.4);
-  text-decoration: none;
-}
-
-.footer li a:focus,
-.footer li a:hover {
-  color: white;
-}
-
-.footer li h3 {
-  color: white;
-  font-size: 1em;
-  margin-bottom: 0.4em;
-}
-
-.footer hr {
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  margin: 0 auto 1.5em;
-  width: 12em;
-}
-
-.footer p {
-  color: rgba(255, 255, 255, 0.4);
-  font-size: 0.9em;
-  line-height: 1.5em;
-  margin: auto;
-  max-width: 35em;
-  text-align: center;
-}
-
 #map_canvas {
   height: 400px;
   width: 100%;
@@ -1064,4 +887,180 @@ header.navigation .search-bar form button[type=submit] img {
 
 .card:active .card-header {
   background-color: #f7f7f7;
+}
+
+ol.default {
+  list-style-type: decimal;
+  list-style-position: inside;
+  margin-bottom: 1.2em;
+}
+
+ol.default > li {
+  margin-bottom: 0.3em;
+}
+
+ul.default {
+  list-style-type: circle;
+  list-style-position: inside;
+  margin-bottom: 1.2em;
+}
+
+ul.default > li {
+  margin-bottom: 0.3em;
+}
+
+img.right {
+  float: right;
+}
+
+p.social {
+  text-align: center;
+}
+
+i.fa {
+  padding: 0.5em;
+  font-size: 1.5em;
+}
+
+article.type-system-rounded {
+  font-family: "Nunito", sans-serif;
+  text-align: left;
+}
+
+article.type-system-rounded::after {
+  clear: both;
+  content: "";
+  display: block;
+}
+
+article.type-system-rounded h1,
+article.type-system-rounded h2,
+article.type-system-rounded h3,
+article.type-system-rounded p {
+  margin: 0;
+}
+
+article.type-system-rounded hr {
+  border-bottom: 1px solid #ddd;
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  margin: 1.5em 0;
+}
+
+article.type-system-rounded p {
+  color: #333;
+  line-height: 1.5;
+}
+
+article.type-system-rounded a {
+  color: #1565c0;
+  text-decoration: none;
+}
+
+article.type-system-rounded .type {
+  border-bottom: 1px solid;
+  display: inline-block;
+  font-family: "Nunito", sans-serif;
+  font-size: 0.7em;
+  font-weight: 800;
+  margin-bottom: 2em;
+  padding: 0.3em 0;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+article.type-system-rounded h1 {
+  font-family: "Varela Round", sans-serif;
+  font-size: 1.8em;
+  margin-bottom: 0.5em;
+}
+
+@media screen and (min-width: 600px) {
+  article.type-system-rounded h1 {
+    font-size: 2.4em;
+  }
+}
+
+article.type-system-rounded h2 {
+  font-family: "Varela Round", sans-serif;
+  font-size: 1.2em;
+  font-weight: 400;
+  line-height: 1.4em;
+  margin-bottom: 0.9em;
+}
+
+@media screen and (min-width: 600px) {
+  article.type-system-rounded h2 {
+    font-size: 1.4em;
+  }
+}
+
+article.type-system-rounded code {
+  background: #F7F7F7;
+  border-radius: 4.5px;
+  border: 1px solid #E0E0E0;
+  font-family: monaco;
+  font-size: 0.7em;
+  font-style: normal;
+  padding: 0.1em 0.4em;
+  white-space: nowrap;
+}
+
+article.type-system-rounded h3 {
+  font-family: "Varela Round", sans-serif;
+  font-size: 1.2em;
+  font-weight: 400;
+  line-height: 1.3em;
+  margin-bottom: 0.4em;
+}
+
+article.type-system-rounded p.date {
+  color: rgba(51, 51, 51, 0.4);
+  font-family: "Nunito", sans-serif;
+  font-size: 0.9em;
+  margin-bottom: 0.3em;
+}
+
+article.type-system-rounded p {
+  font-family: "Nunito", sans-serif;
+  font-size: 1.05em;
+  font-weight: 300;
+  line-height: 1.4em;
+  margin-bottom: 1.5em;
+}
+
+article.type-system-rounded p span {
+  font-family: "Varela Round", sans-serif;
+  font-size: 0.8em;
+  text-transform: uppercase;
+}
+
+article.type-system-rounded a.read-more {
+  display: inline-block;
+  font-family: "Varela Round", sans-serif;
+  font-size: 0.8em;
+  font-weight: 700;
+  margin-left: 0.2em;
+  position: relative;
+  text-transform: uppercase;
+}
+
+article.type-system-rounded a.read-more span {
+  font-size: 1.5em;
+  position: absolute;
+  right: -12px;
+  top: -1px;
+}
+
+article.type-system-rounded hr {
+  width: 3em;
+}
+
+article.type-system-rounded p.author {
+  font-family: "Nunito", sans-serif;
+}
+
+li {
+  color: gray;
 }
