--- a/jade/partials/_footer.jade
+++ b/jade/partials/_footer.jade
@@ -1,5 +1,7 @@
-//- Bourbonpug v1.0, by pixelminds, 2017 GNU General Public License v3 
-    https://github.com/pixelminds/bourbonpug
+//- Bourbonpug v1.0.1 - 
+    by pixelminds 2017 - 
+    2017 GNU General Public License v3 - 
+    https://github.com/pixelminds/bourbonpug 
 footer.footer(role='contentinfo')
         .footer-logo
             img(src='img/logo.png', alt='Logo image')
