--- a/jade/contact.jade
+++ b/jade/contact.jade
@@ -1,5 +1,7 @@
-//- Bourbonpug v1.0, by pixelminds, 2017 GNU General Public License v3 
-    https://github.com/pixelminds/bourbonpug
+//- Bourbonpug v1.0.1 - 
+    by pixelminds 2017 - 
+    2017 GNU General Public License v3 - 
+    https://github.com/pixelminds/bourbonpug 
 include partials/_head.jade
 section
     article.type-system-rounded
