--- a/jade/partials/_head.jade
+++ b/jade/partials/_head.jade
@@ -1,5 +1,8 @@
-// Bourbonpug v1.0, by pixelminds, 2017 GNU General Public License v3 
+// Bourbonpug v1.0.1 - 
+    by pixelminds 2017 - 
+    2017 GNU General Public License v3 - 
     https://github.com/pixelminds/bourbonpug
+    
 doctype html
 html(lang='es')
     head
