--- a/jade/pricing.jade
+++ b/jade/pricing.jade
@@ -1,4 +1,6 @@
-//- Bourbonpug v1.0, by pixelminds, 2017 GNU General Public License v3 
+//- Bourbonpug v1.0.1 - 
+    by pixelminds 2017 - 
+    2017 GNU General Public License v3 - 
     https://github.com/pixelminds/bourbonpug
 include partials/_head.jade
 section
