--- a/jade/contact.jade
+++ b/jade/contact.jade
@@ -1,7 +1,8 @@
-//- Bourbonpug v1.0.1 - 
+//- Bourbonpug v1.0.2 - 
     by pixelminds 2017 - 
-    2017 GNU General Public License v3 - 
+    GNU General Public License v3 - 
     https://github.com/pixelminds/bourbonpug 
+    
 include partials/_head.jade
 section
     article.type-system-rounded
