--- a/scss/_3-generic.scss
+++ b/scss/_3-generic.scss
@@ -1,10 +1,12 @@
-// Bourbonpug v1.0.1 -
+// Bourbonpug v1.0.2 -
 // by pixelminds, 2017 -
 // GNU General Public License v3 -
 // https://github.com/pixelminds/bourbonpug
 
-// resets (SMACSS base, ITCSS generic)
+// 3. generic (ITCSS)
+// resets (SMACSS base)
 
+// 3.1 h5bp (initializr)
 //*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 html {
     color: #222;
