--- a/scss/_2-tools.scss
+++ b/scss/_2-tools.scss
@@ -1,11 +1,57 @@
-// Bourbonpug v1.0.1 -
+// Bourbonpug v1.0.2 -
 // by pixelminds, 2017 -
 // GNU General Public License v3 -
 // https://github.com/pixelminds/bourbonpug
 
-// tools (ITCSS, SMACSS complex modules)
+// 2. tools (ITCSS)
+// mixins and functions (SMACSS complex modules)
 
-//parallax.js
+// 2.1 parallax
+// 2.2 navigation
+// 2.3 sticky
+// 2.4 map
+// 2.5 cards
+
+// specific variables
+
+// navigation
+  // $base-border-radius
+  // $base-border-color
+  // $action-color
+  $dark-gray2: #068 !default; // *overriding refills default
+  // $large-screen
+  $navigation-padding: 1em;
+  $navigation-background: $dark-gray2;
+  $navigation-color: transparentize(white, 0.3);
+  $navigation-color-hover: white;
+  $navigation-height: 60px;
+  $navigation-nav-button-background: $action-color;
+  $navigation-nav-button-background-hover: lighten($navigation-background, 10%);
+  $navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20%);
+  $navigation-search-background: lighten($navigation-background, 5);
+  $navigation-search-border: 1px solid darken($navigation-background, 5);
+  $navigation-active-link-color: transparentize(white, 0.5);
+  $navigation-submenu-padding: 1em;
+  $navigation-submenu-width: 12em;
+  $horizontal-bar-mode: $large-screen;
+
+// cards
+  // $base-border-color
+  // $base-border-radius
+  $base-background-color: white !default;
+  // $base-spacing
+  // $action-color
+  // $dark-gray
+  $base-font-color: $dark-gray !default;
+  $card-border-color: $base-border-color;
+  $card-border: 1px solid $card-border-color;
+  $card-background: lighten($card-border-color, 10%);
+  $card-header-background: $card-background;
+  $card-margin: 1em;
+  $card-image-hover-opacity: 0.7;
+  $card-image-hover-color: #F8F2B4;
+
+// 2.1 parallax.js
 
 .parallax-window,
 .parallax-window2,
@@ -16,7 +62,7 @@
     background: transparent;
 }
 
-// navigation (refills)
+// 2.2 navigation (refills)
 
 header.navigation {
   background-color: $navigation-background;
@@ -345,7 +391,7 @@ header.navigation {
   }
 }
 
-// sticky navigation (sticky.js)
+// 2.3 sticky navigation (sticky.js)
 .active {
     color: #fff !important;
     text-decoration: underline !important;
@@ -366,7 +412,7 @@ header.navigation {
 //   visibility: visible;
 // }
 
-// map
+// 2.4 map
 
 #map_canvas {
   height: 400px;
@@ -394,7 +440,7 @@ header.navigation {
   margin: 0;
 }
 
-// cards
+// 2.5 cards
 
 .cards {
   display: flex;
