--- a/jade/partials/_head.jade
+++ b/jade/partials/_head.jade
@@ -2,9 +2,9 @@
     by pixelminds 2017 - 
     GNU General Public License v3 - 
     https://github.com/pixelminds/bourbonpug 
-    
+
 doctype html
-html(lang='es')
+!= "<html lang='es'>"
     head
         title MyCompany
         meta(charset='utf-8')
@@ -23,7 +23,7 @@ html(lang='es')
         script(src='js/modernizr-2.8.3.min.js')
         link(href='//cdnjs.cloudflare.com/ajax/libs/animate.css/3.0.0/animate.min.css',rel='stylesheet' type='text/css')
         link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
-    body
+    != "<body>"
         .parallax-window
 
         header.navigation#sticker(role='banner')
