--- a/jade/pricing.jade
+++ b/jade/pricing.jade
@@ -1,7 +1,7 @@
 //- Bourbonpug v1.0.2 - 
-    by pixelminds 2017 - 
-    GNU General Public License v3 - 
-    https://github.com/pixelminds/bourbonpug 
+//-    by pixelminds 2017 - 
+//-    GNU General Public License v3 - 
+//-    https://github.com/pixelminds/bourbonpug 
 
 include partials/_head.jade
 section
